#2007 Actualitzar els plugins i dependències per JBoss 7.2